--- a/JdbcDemo/.classpath
+++ b/JdbcDemo/.classpath
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/JAVALIB/derby14..2.0/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="D:/JAVALIB/derby14..2.0/lib/derby.jar"/>
+	<classpathentry kind="lib" path="D:/JAVALIB/derby14..2.0/lib/derbynet.jar"/>
+	<classpathentry kind="lib" path="D:/JAVALIB/derby14..2.0/lib/derbyoptionaltools.jar"/>
+	<classpathentry kind="lib" path="D:/JAVALIB/derby14..2.0/lib/derbyrun.jar"/>
+	<classpathentry kind="lib" path="D:/JAVALIB/derby14..2.0/lib/derbytools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
